# tret

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/tret/: __init__.py  arguments.py  constants.py  main_cli.py
src/tret/core/: __init__.py  code_backup_and_restore.py  data_backup.py  main_class.py
src/tret/utils/: module_detection.py  tarball_utils.py
tests/: test_code_backup_and_restore.py  test_data_backup.py  test_main_class.py  test_module_detection.py  test_tarball_utils.py
